--- a/app/src/main/res/layout/activity_pagina_giornaliera_visione.xml
+++ b/app/src/main/res/layout/activity_pagina_giornaliera_visione.xml
@@ -7,17 +7,36 @@
     android:layout_height="match_parent"
     tools:context=".ui.calendario.PaginaGiornalieraVisione">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.NavigationBar.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/back_login"
+            android:textAlignment="center"
+            app:popupTheme="@style/Theme.NavigationBar.PopupOverlay"
+            app:titleTextColor="#000000" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <TextView
         android:id="@+id/giornoSelezionato"
         android:layout_width="319dp"
         android:layout_height="36dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="128dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,23 +47,25 @@
         android:layout_marginTop="48dp"
         android:text="Allenamento svolto:"
         android:textAlignment="center"
-        android:textColor="#050404"
+        android:textColor="#0000FF"
         android:textColorHighlight="#8A4E4E"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/giornoSelezionato" />
 
     <TextView
         android:id="@+id/schedaSvolta"
-        android:layout_width="168dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="52dp"
+        android:layout_width="300dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="32dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -52,33 +73,39 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         android:text="Cos'hai mangiato?"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#000BFF"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/schedaSvolta" />
 
     <Spinner
         android:id="@+id/ciboSpinner"
-        android:layout_width="411dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_width="329dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/infoCibo"
         android:layout_width="88dp"
         android:layout_height="39dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="40dp"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/ciboSpinner"
-        tools:layout_editor_absoluteX="161dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ciboSpinner" />
 
     <TextView
         android:id="@+id/textView8"
@@ -91,6 +118,20 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/giornoSelezionato"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.738" />
+
+    <Button
+        android:id="@+id/btnInd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Indietro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoCibo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
